--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "inmeta-redux-ts-2021",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -15,6 +16,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
     "cypress": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "backend": "json-server --watch src/json-server/db.json --port 5000 --delay=1000 --routes src/json-server/routes.json",
+    "start:fullstack": "concurrently \"npm run backend\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^6.4.0",
+    "json-server": "^0.17.0"
   }
 }
