--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/lab": "4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.4",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -20,9 +21,12 @@
     "cypress": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-injectors": "^1.3.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
@@ -53,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.20",
     "concurrently": "^6.4.0",
     "json-server": "^0.17.0"
   }
