--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.20",
     "concurrently": "^6.4.0",
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "msw": "^0.35.0",
+    "uuid": "^8.3.2"
   }
 }
