--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.20",
+    "@types/uuid": "^8.3.3",
     "concurrently": "^6.4.0",
     "json-server": "^0.17.0",
     "msw": "^0.35.0",
