--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "cypress": "^9.0.0",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -29,7 +30,8 @@
     "redux": "^4.1.2",
     "redux-injectors": "^1.3.0",
     "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,6 +62,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.20",
     "@types/uuid": "^8.3.3",
+    "@types/yup": "^0.29.13",
     "concurrently": "^6.4.0",
     "json-server": "^0.17.0",
     "msw": "^0.35.0",
