--- a/package.json
+++ b/package.json
@@ -4,32 +4,33 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@emotion/react": "^11.6.0",
+    "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.1.1",
-    "@mui/lab": "^5.0.0-alpha.55",
-    "@mui/material": "^5.1.1",
-    "@mui/styles": "^5.1.1",
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.35",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/lab": "5.0.0-alpha.68",
+    "@mui/material": "^5.4.1",
+    "@mui/styles": "^5.4.1",
+    "@reduxjs/toolkit": "^1.7.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.24",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "axios": "^0.24.0",
-    "cypress": "^9.0.0",
+    "axios": "^0.25.0",
+    "cypress": "^9.4.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-injectors": "^1.3.0",
-    "typescript": "^4.5.2",
+    "redux-localstorage-simple": "^2.4.1",
+    "typescript": "^4.5.5",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
@@ -60,12 +61,13 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.20",
-    "@types/uuid": "^8.3.3",
+    "@types/react-redux": "^7.1.22",
+    "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.13",
-    "concurrently": "^6.4.0",
+    "concurrently": "^7.0.0",
     "json-server": "^0.17.0",
-    "msw": "^0.35.0",
+    "msw": "^0.36.8",
+    "prettier": "^2.5.1",
     "uuid": "^8.3.2"
   }
 }
