--- a/package.json
+++ b/package.json
@@ -12,31 +12,30 @@
     "start:fullstack": "concurrently \"npm run backend\" \"npm run start\""
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.10.6",
-    "@mui/lab": "5.0.0-alpha.101",
-    "@mui/material": "^5.10.7",
-    "@mui/styles": "^5.10.7",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "5.0.0-alpha.114",
+    "@mui/material": "^5.11.3",
+    "@mui/styles": "^5.11.2",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.62",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "axios": "^0.27.2",
+    "@types/jest": "^29.2.5",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "axios": "^1.2.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
-    "react-router": "^6.4.1",
-    "react-router-dom": "^6.4.1",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.6.1",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-localstorage-simple": "^2.5.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.4",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
@@ -58,14 +57,19 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
+  },
   "devDependencies": {
-    "@types/react-redux": "^7.1.24",
-    "@types/uuid": "^8.3.4",
-    "@types/yup": "^0.32.0",
-    "concurrently": "^7.4.0",
-    "json-server": "^0.17.0",
-    "msw": "^0.47.3",
-    "prettier": "^2.7.1",
+    "@types/node": "^18.11.18",
+    "@types/react-redux": "^7.1.25",
+    "@types/uuid": "^9.0.0",
+    "concurrently": "^7.6.0",
+    "json-server": "^0.17.1",
+    "msw": "^0.49.2",
+    "prettier": "^2.8.1",
     "uuid": "^9.0.0"
   }
 }
