--- a/package.json
+++ b/package.json
@@ -14,30 +14,41 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/lab": "5.0.0-alpha.155",
-    "@mui/material": "^5.14.20",
-    "@mui/styles": "^5.14.20",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/lab": "5.0.0-alpha.156",
+    "@mui/material": "^5.15.0",
+    "@mui/styles": "^5.15.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.11",
-    "@types/react": "^18.2.43",
+    "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.3",
-    "react-router": "^6.20.1",
-    "react-router-dom": "^6.20.1",
+    "react-redux": "^9.0.4",
+    "react-router": "^6.21.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.0",
     "redux-localstorage-simple": "^2.5.1",
     "typescript": "^5.3.3",
     "web-vitals": "^3.5.0",
-    "yup": "^1.3.2"
+    "yup": "^1.3.3"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/node": "^20.10.4",
+    "@types/react-redux": "^7.1.33",
+    "@types/uuid": "^9.0.7",
+    "concurrently": "^8.2.2",
+    "json-server": "^0.17.4",
+    "msw": "^2.0.11",
+    "prettier": "^3.1.1",
+    "uuid": "^9.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -61,15 +72,5 @@
     "moduleNameMapper": {
       "^axios$": "axios/dist/node/axios.cjs"
     }
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/react-redux": "^7.1.32",
-    "@types/uuid": "^9.0.7",
-    "concurrently": "^8.2.2",
-    "json-server": "^0.17.4",
-    "msw": "^2.0.10",
-    "prettier": "^3.1.1",
-    "uuid": "^9.0.1"
   }
 }
